adjusted padding on hamburger menu, fixed the home background for mobile, fixed the javascript fish lining up on mobile (hopefully)

--- a/website/style.css
+++ b/website/style.css
@@ -26,18 +26,26 @@ svg {
 }
 
 body.home {
-    margin: 0;
-    font-family: 'Segoe UI', Arial, sans-serif;
-    background-image: url('assets/homePage/WebsiteBG1.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    background-attachment: fixed;
+  position: relative;
+  margin: 0;
+  overflow-x: hidden;
+}
+
+body.home::before {
+  content: "";
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('assets/homePage/WebsiteBG1.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: -1;
 }
 
 body.standard{
     margin: 0;
-    font-family: 'Segoe UI', Arial, sans-serif;
     background: var(--primary-dark);
 }
 
@@ -111,7 +119,7 @@ header {
   display:inline-flex;
   align-items:center;
   justify-content:center;
-  padding:0.5rem;
+  padding:1rem;
   font-size:3rem;
   height:5vh;
   width:5vw;
@@ -590,6 +598,7 @@ main {
     z-index: -1;
     pointer-events: none;
     overflow: hidden;
+    line-height: 1;
 }
 
 .research-projects {
